<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>Event Engine</name>
    <description>Event engine developed for the Virtual Referent Space (VRS).</description>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <groupId>com.github.zhgzhg</groupId>
    <artifactId>event-engine</artifactId>
    <version>0.2.7</version>
    <packaging>pom</packaging>

    <url>https://github.com/zhgzhg/Event-Engine</url>

    <scm>
        <connection>scm:git:git@github.com:zhgzhg/Event-Engine.git</connection>
        <developerConnection>scm:git:git@github.com:zhgzhg/Event-Engine.git</developerConnection>
        <url>https://github.com/zhgzhg/Event-Engine.git</url>
    </scm>

    <distributionManagement>
        <repository>
            <id>bintray-zhgzhg-Event-Engine</id>
            <name>zhgzhg-Event-Engine</name>
            <url>https://api.bintray.com/maven/zhgzhg/Event-Engine/Event-Engine/;publish=0;override=1</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>bintray-zhgzhg-Event-Engine</id>
            <name>bintray</name>
            <url>https://dl.bintray.com/zhgzhg/Event-Engine</url>
        </repository>
    </repositories>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <ee-j9p-workarounds-version>0.2.2</ee-j9p-workarounds-version>

        <commons-lang3-version>3.11</commons-lang3-version>
        <commons-codec-version>1.15</commons-codec-version>
        <gson-version>2.8.6</gson-version>
        <classgraph-version>4.8.98</classgraph-version>
        <classmate-version>1.5.1</classmate-version>
        <activemq-client-version>5.16.0</activemq-client-version>
        <activemq-client-geronimo-spec-version>1.1.1</activemq-client-geronimo-spec-version>
        <kafka-clients-version>2.7.0</kafka-clients-version>

        <junit-jupiter-engine-version>5.7.0</junit-jupiter-engine-version>
        <junit-jupiter-api-version>5.7.0</junit-jupiter-api-version>
        <junit-platform-launcher-version>1.7.0</junit-platform-launcher-version>
        <apiguardian-api-version>1.1.1</apiguardian-api-version>

        <maven-compiler-plugin-version>3.8.1</maven-compiler-plugin-version>
        <maven-surefire-plugin-version>2.22.2</maven-surefire-plugin-version>
        <maven-javadoc-plugin-version>3.2.0</maven-javadoc-plugin-version>
        <maven-source-plugin-version>3.2.1</maven-source-plugin-version>
        <maven-jar-plugin-version>3.2.0</maven-jar-plugin-version>
        <maven-shade-plugin-version>3.2.4</maven-shade-plugin-version>
        <maven-clean-plugin-version>3.1.0</maven-clean-plugin-version>
        <maven-resources-plugin-version>3.2.0</maven-resources-plugin-version>
        <maven-deploy-plugin-version>2.8.2</maven-deploy-plugin-version>
    </properties>

    <profiles>
        <profile>
            <id>java8</id>
            <activation>
                <jdk>1.8</jdk>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <maven-compiler-plugin-source-version>1.8</maven-compiler-plugin-source-version>
                <maven-compiler-plugin-target-version>1.8</maven-compiler-plugin-target-version>
                <module-info-java-file/>
                <javadoc-additionalJOption/>
                <argline-maven-surefire-plugin/>
            </properties>
        </profile>

        <profile>
            <id>java9p</id>
            <activation>
                <jdk>[9,]</jdk>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <maven-compiler-plugin-source-version>9</maven-compiler-plugin-source-version>
                <maven-compiler-plugin-target-version>9</maven-compiler-plugin-target-version>
                <javadoc-additionalJOption>-html5</javadoc-additionalJOption>
                <module-info-java-file>module-info.java</module-info-java-file> <!-- javadoc on java 9 issues still persist-->
                <argline-maven-surefire-plugin>--add-opens net.uniplovdiv.fmi.cs.vrs.event/net.uniplovdiv.fmi.cs.vrs.event=ALL-UNNAMED,net.uniplovdiv.fmi.cs.vrs.event.serializers --add-opens net.uniplovdiv.fmi.cs.vrs.event/test=ALL-UNNAMED,net.uniplovdiv.fmi.cs.vrs.event.serializers --add-opens net.uniplovdiv.fmi.cs.vrs.event.serializers/test=ALL-UNNAMED,net.uniplovdiv.fmi.cs.vrs.event,com.google.gson --add-opens net.uniplovdiv.fmi.cs.vrs.event.dispatchers/test=ALL-UNNAMED</argline-maven-surefire-plugin>
            </properties>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3-version}</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${commons-codec-version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson-version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml</groupId>
                <artifactId>classmate</artifactId>
                <version>${classmate-version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.classgraph</groupId>
                <artifactId>classgraph</artifactId>
                <version>${classgraph-version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.kafka</groupId>
                <artifactId>kafka-clients</artifactId>
                <version>${kafka-clients-version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.activemq</groupId>
                <artifactId>activemq-client</artifactId>
                <version>${activemq-client-version}</version>
                <exclusions>
                    <exclusion>
                        <artifactId>org.apache.geronimo.specs</artifactId>
                        <groupId>geronimo-jms_1.1_spec</groupId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <artifactId>com.github.zhgzhg</artifactId>
                <groupId>event-engine-j9p-workarounds</groupId>
                <version>${ee-j9p-workarounds-version}</version>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit-jupiter-api-version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit-jupiter-engine-version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.platform</groupId>
                <artifactId>junit-platform-launcher</artifactId>
                <version>${junit-platform-launcher-version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apiguardian</groupId>
                <artifactId>apiguardian-api</artifactId>
                <version>${apiguardian-api-version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>ee-annotations</module>
        <module>ee-events</module>
        <module>ee-serializers</module>
        <module>ee-dispatchers</module>
        <module>ee-all</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven-resources-plugin-version}</version>
                    <executions>
                        <execution>
                            <id>copy-module-info-files</id>
                            <phase>compile</phase>
                            <goals>
                                <goal>copy-resources</goal>
                            </goals>
                            <configuration>
                                <outputDirectory>${project.build.sourceDirectory}</outputDirectory>
                                <resources>
                                    <resource>
                                        <directory>${project.build.sourceDirectory}/../</directory>
                                        <includes>
                                            <include>${module-info-java-file}</include>
                                        </includes>
                                    </resource>
                                </resources>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin-version}</version>
                    <configuration>
                        <source>${maven-compiler-plugin-source-version}</source>
                        <target>${maven-compiler-plugin-target-version}</target>
                        <showWarnings>true</showWarnings>
                        <compilerArgument>-Xlint:unchecked</compilerArgument>
                        <!--excludes>
                            <exclude>${module-info-java-file}</exclude>
                        </excludes-->
                        <!--proc>none</proc>
						<annotationProcessorPaths>
							<annotationProcessorPath>
								<groupId>com.github.zhgzhg</groupId>
								<artifactId>ee-annotations</artifactId>
								<version>0.2.0</version>
							</annotationProcessorPath>
						</annotationProcessorPaths-->
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin-version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.apache.maven.surefire</groupId>
                            <artifactId>surefire-logger-api</artifactId>
                            <version>${maven-surefire-plugin-version}</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <argLine>${argline-maven-surefire-plugin}</argLine>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${maven-javadoc-plugin-version}</version>
                    <configuration>
                        <additionalJOption>${javadoc-additionalJOption}</additionalJOption>
                        <show>protected</show>
                        <excludePackageNames>main:test.*</excludePackageNames>
                        <failOnError>false</failOnError> <!-- javadoc generation is failing on java9 and later versions -->
                        <source>8</source>               <!-- so this is a workaround -->
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin-version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${maven-assembly-plugin-version}</version>
                    <configuration>
                        <descriptorRefs>
                            <descriptorRef>jar-with-dependencies</descriptorRef>
                        </descriptorRefs>
                    </configuration>
                    <executions>
                        <execution>
                            <id>make-assembly</id>
                            <phase>package</phase>
                            <goals>
                                <goal>single</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>${maven-shade-plugin-version}</version>
                    <configuration>
                        <shadedClassifierName>with-deps</shadedClassifierName>
                        <shadedArtifactAttached>true</shadedArtifactAttached>
                        <transformers>
                            <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
                                <addHeader>false</addHeader>
                            </transformer>
                        </transformers>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven-source-plugin-version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>${maven-clean-plugin-version}</version>
                    <executions>
                        <execution>
                            <id>clean-module-info-java-files</id>
                            <phase>clean</phase>
                            <goals>
                                <goal>clean</goal>
                            </goals>
                            <configuration>
                                <excludeDefaultDirectories>true</excludeDefaultDirectories>
                                <verbose>true</verbose>
                                <filesets>
                                    <fileset>
                                        <directory>${project.build.sourceDirectory}</directory>
                                        <followSymlinks>false</followSymlinks>
                                        <includes>
                                            <include>module-info.java</include>
                                        </includes>
                                    </fileset>
                                </filesets>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>${maven-deploy-plugin-version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-module-info-files</id>
                        <goals><goal>copy-resources</goal></goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <executions>
                    <execution>
                        <id>create-javadoc-jar</id>
                        <goals>
                            <goal>aggregate-jar</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
            </plugin>
        </plugins>

    </build>

</project>
